--- a/calculator.html
+++ b/calculator.html
@@ -5,6 +5,11 @@ function cube() {
 1 var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 3);
 }
+function fourth() {
+1 var num = document.getElementById("n1");
+ num.value = Math.pow(num.value, 4);
+}
+
 </script>
 </head>
 <body>
@@ -12,5 +17,6 @@ function cube() {
 Number:
 <input type="text" id="n1">
  <button onclick="cube()"> x^3 </button>
+ <button onclick="fourth()"> x^4 </button>
 </body>
 </html>
