--- a/calculator.html
+++ b/calculator.html
@@ -5,6 +5,10 @@ function cube() {
 1 var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 3);
 }
+function sen() {
+1 var num = document.getElementById("n1");
+ num.value = sin(num.value);
+}
 </script>
 </head>
 <body>
@@ -12,5 +16,6 @@ function cube() {
 Number:
 <input type="text" id="n1">
  <button onclick="cube()"> x^3 </button>
+<button onclick="sen"> x^4 </button>
 </body>
 </html>
